--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+
+    <string name="base_path">https://tatts.com/pagedata/racing</string>
+    <string name="race_day_listing">RaceDay.xml</string>
 </resources>
