--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,12 @@
 
     <string name="base_path">https://tatts.com/pagedata/racing</string>
     <string name="race_day_listing">RaceDay.xml</string>
-    <string name="raceday_download_msg">Retrieving today\'s races.\r\n This may take a minute.</string>
+    <string name="raceday_download_msg">Retrieving today\'s races.\r\nThis may take a minute.</string>
+
+    <string name="date_select_fragment_tag">date_search_fragment_tag</string>
+
+    <!-- Button texts. -->
+    <string name="button_cancel_text">Cancel</string>
+    <string name="button_ok_text">OK</string>
+
 </resources>
