Establish basic preferences.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,14 @@
     <string name="button_cancel_text">Cancel</string>
     <string name="button_ok_text">OK</string>
 
+    <!-- Meeting preferences. -->
+    <string name="pref_meetings_show_today_key">pref_meetings_show_today_key</string>
+    <string name="pref_meetings_show_today_title">Show Meetings For Today</string>
+    <string name="pref_meetings_show_today_summary">Show today\'s meetings on application start.</string>
+
+    <string name="pref_meetings_cache_key">pref_meetings_cache_key</string>
+    <string name="pref_meetings_cache_title">Cache Meetings</string>
+    <string name="pref_meetings_cache_summary">Save Meetings previously downloaded.</string>
+
+
 </resources>
