--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,8 +18,12 @@
     <string name="raceday_download_withdate_msg">Retrieving meetings for</string>
     <string name="raceday_download_msg_warn">\r\nThis could take a minute or more.</string>
     <string name="raceday_meetinginfo_dowload_msg">Meeting information successfully retrieved.</string>
-    <string name="raceday_meeting_process_msg">Collating meeting information.\r\nThis could take a minute or more.</string>
+    <string name="raceday_meeting_process_msg">Collating meeting information.\r\n\r\nThis could take a minute or more.</string>
     <string name="all_meetings_removed">All meetings removed.</string>
+    <string name="network_connection_error">No active network connection exists.\r\n\r\nCheck your device settings.</string>
+
+    <!-- Keys. -->
+    <string name="network_dialog_text">network_dialog_text</string>
 
     <!-- Fragment tags.-->
     <string name="meetings_fragment_tag">meetings_fragment_tag</string>
@@ -45,5 +49,6 @@
 
     <!-- Dialog title. -->
     <string name="title_dialog_delete">Delete Meetings</string>
+    <string name="title_dialog_network">Network Problem</string>
 
 </resources>
