--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <!-- Keys. -->
     <string name="network_dialog_text">network_dialog_text</string>
     <string name="meetings_db_rowid_key">meetings_rowid_key</string>
+    <string name="races_meeting_id_key">races_meeting_id_key</string>
 
     <!-- Fragment tags.-->
     <string name="meetings_fragment_tag">meetings_fragment_tag</string>
