--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,8 @@
     <!-- Messages. -->
     <string name="raceday_download_msg">Retrieving today\'s meetings.</string>
     <string name="raceday_download_withdate_msg">Retrieving meetings for</string>
-    <string name="raceday_download_msg_warn">\r\nThis could take a minute or more.</string>
+    <string name="racemeeting_download_msg">Retrieving races for meeting code</string>
+    <string name="download_msg_warn">\r\nThis could take a minute or more.</string>
     <string name="raceday_meetinginfo_dowload_msg">Meeting information successfully retrieved.</string>
     <string name="raceday_meeting_process_msg">Collating meeting information.\r\n\r\nThis could take a minute or more.</string>
     <string name="all_meetings_removed">All meetings removed.</string>
